Bug #35847: Add functionality to change user passwords in the UMC server core * update the cached LDAP password in UDM on password change * hide the UDM users/self module by default, rename it into 'User settings' * Add a UMC module which adds a menu entry for password changes * Add the module to the UMC dependencies
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54983 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (10.0.24-1) unstable; urgency=medium
+
+  * Bug #35847: remove password from users/self
+
+ -- Florian Best <best@univention.de>  Mon, 27 Oct 2014 20:52:37 +0100
+
 univention-directory-manager-modules (10.0.23-1) unstable; urgency=low
 
   * Bug #36301: adapted some labels in the mail domain module
