--- a/management/univention-management-console/src/univention/management/console/de.po
+++ b/management/univention-management-console/src/univention/management/console/de.po
@@ -328,3 +328,6 @@ msgstr ""
 #: univention/management/console/protocol/message.py:246
 msgid "error parsing UMCP message body"
 msgstr "Fehler beim Parsen des UMCP-Nachrichtenrumpfes"
+
+msgid "Password successfully changed."
+msgstr "Passwort erfolgreich geändert."
