--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.174-2) unstable; urgency=medium
+
+  * Depend on python-psutil instead of python-psutils (Bug #36108)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 27 Oct 2014 21:53:51 +0100
+
 ucs-test (4.0.174-1) unstable; urgency=low
 
   * Bug #36214: copy wait_for_s4connector() to univention/testing/ucs_samba.py
