--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.30-1) unstable; urgency=medium
+
+  * Update browser compatibility list (Bug #33970)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 28 Oct 2014 07:39:05 +0100
+
 univention-system-setup (8.1.29-1) unstable; urgency=medium
 
   Bug #35654:
