* Use getMachineConnection() for creating new cloud connections   (Bug #36323)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54990 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,10 @@
+univention-virtual-machine-manager-daemon (4.0.4-1) unstable; urgency=medium
+
+  * Use getMachineConnection() for creating new cloud connections
+    (Bug #36323)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 28 Oct 2014 08:29:39 +0100
+
 univention-virtual-machine-manager-daemon (4.0.3-20) unstable; urgency=low
 
   * Update translations (Bug #32842) 
