--- a/virtualization/univention-virtual-machine-manager-schema/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-schema/debian/changelog
@@ -1,3 +1,10 @@
+univention-virtual-machine-manager-schema (5.0.2-1) unstable; urgency=medium
+
+  * Give DCs and member server permissions to create cloud connection
+    objects (Bug #36323)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 28 Oct 2014 08:32:08 +0100
+
 univention-virtual-machine-manager-schema (5.0.1-8) unstable; urgency=low
 
   * Bug #36253: Moved EC2 connection support to separate source package 
