Bug #36095: * replaced tags with actual english text in index.html
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54993 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,10 @@
+univention-apache (7.0.5-2) unstable; urgency=low
+
+  Bug #36095:
+  * replaced tags with actual english text in index.html
+
+ -- Drees Dormann <dormann@univention.de>  Tue, 28 Oct 2014 08:38:36 +0100
+
 univention-apache (7.0.5-1) unstable; urgency=medium
 
   Bug #36095:
