* Bug #35823: replaced .postint with .links
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54994 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/stylus/debian/changelog
+++ b/management/stylus/debian/changelog
@@ -1,3 +1,9 @@
+stylus (0.48.1-2) unstable; urgency=low
+
+  * Bug #35823: replaced .postint with .links
+
+ -- Alexander Kramer <kramer@univention.de>  Tue, 28 Oct 2014 08:09:20 +0100
+
 stylus (0.48.1-1) unstable; urgency=medium
 
   * Bug #35823: version bump to corresponding upstream version
