--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,11 @@
+univention-apache (7.0.5-3) unstable; urgency=low
+
+  Bug #36095:
+  * added shadow to language select
+  * added missing language select icon
+
+ -- Drees Dormann <dormann@univention.de>  Tue, 28 Oct 2014 09:40:51 +0100
+
 univention-apache (7.0.5-2) unstable; urgency=low
 
   Bug #36095:
