--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,11 @@
+univention-apache (7.0.5-4) unstable; urgency=low
+
+  Bug #36095:
+  * renewed links and adapted translation of links
+  * fixed typo in startsite.js which prevented selection of language
+
+ -- Drees Dormann <dormann@univention.de>  Tue, 28 Oct 2014 10:34:19 +0100
+
 univention-apache (7.0.5-3) unstable; urgency=low
 
   Bug #36095:
