--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,9 @@
+univention-apache (7.0.5-5) unstable; urgency=medium
+
+  * Bug #36095: added unzip, sed to build dependencies
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 28 Oct 2014 10:38:37 +0100
+
 univention-apache (7.0.5-4) unstable; urgency=low
 
   Bug #36095:
