* Bug #36258: Added symlinks for the missing icons
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55003 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (5.1.14-1) unstable; urgency=low
+
+  * Bug #36258: Added symlinks for the missing icons
+
+ -- Alexander Kramer <kramer@univention.de>  Tue, 28 Oct 2014 10:44:26 +0100
+
 univention-management-console-module-udm (5.1.13-1) unstable; urgency=medium
 
   * Bug #35847: Add functionality to change user passwords in the UMC server core
