--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,13 @@
+univention-apache (7.0.5-6) unstable; urgency=low
+
+  Bug #36095:
+    * renewed links and adapted translation of links
+    * fixed typo in startsite.js which prevented selection of language
+    * removed legacy translation strings
+    * adapted translation of links
+
+ -- Drees Dormann <dormann@univention.de>  Tue, 28 Oct 2014 10:57:40 +0100
+
 univention-apache (7.0.5-5) unstable; urgency=medium
 
   * Bug #36095: added unzip, sed to build dependencies
@@ -9,8 +19,10 @@ univention-apache (7.0.5-4) unstable; urgency=low
   Bug #36095:
   * renewed links and adapted translation of links
   * fixed typo in startsite.js which prevented selection of language
+  * removed legacy translation strings
+  * adapted translation of links
 
- -- Drees Dormann <dormann@univention.de>  Tue, 28 Oct 2014 10:34:19 +0100
+ -- Drees Dormann <dormann@univention.de>  Tue, 28 Oct 2014 10:56:46 +0100
 
 univention-apache (7.0.5-3) unstable; urgency=low
 
