Bug #35654: outsource UMC startup checks into the modules
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55009 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (4.1.13-1) unstable; urgency=medium
+
+  * Bug #35654: outsource UMC startup checks into the modules
+
+ -- Florian Best <best@univention.de>  Tue, 28 Oct 2014 11:10:22 +0100
+
 univention-management-console-module-appcenter (4.1.12-1) unstable; urgency=medium
 
   * Bug #36296: added shop icon
