--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.76-1) unstable; urgency=medium
+
+  * Bug #35654: outsource UMC startup checks into the modules
+
+ -- Florian Best <best@univention.de>  Tue, 28 Oct 2014 11:11:43 +0100
+
 univention-management-console-frontend (4.1.75-1) unstable; urgency=medium
 
   Bug #35654:
