--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,4 +1,10 @@
-univention-management-console-module-udm (5.1.15-1) unstable; urgency=low
+univention-management-console-module-udm (5.1.16-1) unstable; urgency=medium
+
+  * Bug #35654: outsource UMC startup checks into the modules
+
+ -- Florian Best <best@univention.de>  Tue, 28 Oct 2014 11:11:17 +0100
+
+univention-management-console-module-udm (5.1.15-1) unstable; urgency=medium
 
   * Bug #36258: Added the symlinks to svn
 
