* Bug #36305: Cloud instance detailpage fields are now readonly * Bug #36306: Terminated EC2 instances have the correct state * Bug #35946: Updated instance state changes, added icon for terminated instances
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55010 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,12 @@
+univention-virtual-machine-manager-daemon (4.0.4-2) unstable; urgency=low
+
+  * Bug #36305: Cloud instance detailpage fields are now readonly
+  * Bug #36306: Terminated EC2 instances have the correct state
+  * Bug #35946: Updated instance state changes, added icon for terminated
+    instances 
+
+ -- Erik Damrose <damrose@univention.de>  Tue, 28 Oct 2014 11:43:51 +0100
+
 univention-virtual-machine-manager-daemon (4.0.4-1) unstable; urgency=medium
 
   * Use getMachineConnection() for creating new cloud connections
