--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console (6.0.24-23) unstable; urgency=medium
+
+  * Bug #36319: Improved exception handling
+
+ -- Arvid Requate <requate@univention.de>  Tue, 28 Oct 2014 12:17:52 +0100
+
 univention-management-console (6.0.24-22) unstable; urgency=medium
 
   * Bug #36319: Workaround for libpam-krb5/heimdal behaviour in case
