--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (9.0.8-1) unstable; urgency=low
+
+  * Bug #36321: moved label next to radio buttons
+
+ -- Alexander Kramer <kramer@univention.de>  Tue, 28 Oct 2014 12:30:46 +0100
+
 univention-ad-connector (9.0.7-1) unstable; urgency=medium
 
   * Bug #35654: fix wizard images
