* Bug #36095: adjust UMC icon for UCS start site
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55015 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.77-1) unstable; urgency=medium
+
+  * Bug #36095: adjust UMC icon for UCS start site
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 28 Oct 2014 12:44:27 +0100
+
 univention-management-console-frontend (4.1.76-1) unstable; urgency=medium
 
   * Bug #35654: outsource UMC startup checks into the modules
