* Bug #35982: Show pending state with a distinct icon
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55016 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (4.0.4-3) unstable; urgency=low
+
+  * Bug #35982: Show pending state with a distinct icon 
+
+ -- Erik Damrose <damrose@univention.de>  Tue, 28 Oct 2014 12:58:19 +0100
+
 univention-virtual-machine-manager-daemon (4.0.4-2) unstable; urgency=low
 
   * Bug #36305: Cloud instance detailpage fields are now readonly
