Bug #36095: * adjusted styling of noscript tag * cleaned up html ids * added new javascript module for initial query string parsing
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55019 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/js/ucs/de.po
+++ b/services/univention-apache/js/ucs/de.po
@@ -14,10 +14,9 @@ msgstr ""
 
 #: startsite.js:88
 msgid ""
-"Additional services may be installed in the category <a href=\"#admin"
-"\">Administration</a> via Univention Management Console."
+"Additional services may be installed in the category <a href='#admin'>Administration</a> via Univention Management Console."
 msgstr ""
-"Zusätzliche Dienste können in der Rubrik <a href=\"#admin\">Administration</"
+"Zusätzliche Dienste können in der Rubrik <a href='#admin'>Administration</"
 "a> über Univention Management Console installiert werden."
 
 #: startsite.js:86
