--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,12 @@
+univention-apache (7.0.6-1) unstable; urgency=low
+
+  Bug #36095: 
+  * adjusted styling of noscript tag
+  * cleaned up html ids
+  * added new javascript module for initial query string parsing
+
+ -- Johannes Keiser <keiser@univention.de>  Tue, 28 Oct 2014 13:45:49 +0100
+
 univention-apache (7.0.5-6) unstable; urgency=low
 
   Bug #36095:
