* Bug #36319: Replace workaround by propper conversation of pwchange   triggered during pam.authenticate().
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@55020 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console (6.0.24-24) unstable; urgency=medium
+
+  * Bug #36319: Replace workaround by propper conversation of pwchange
+    triggered during pam.authenticate().
+
+ -- Arvid Requate <requate@univention.de>  Tue, 28 Oct 2014 13:51:49 +0100
+
 univention-management-console (6.0.24-23) unstable; urgency=medium
 
   * Bug #36319: Improved exception handling
