Bug #36095: * added automatic resize of entry button captions
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55022 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,10 @@
+univention-apache (7.0.6-2) unstable; urgency=low
+
+  Bug #36095:
+  * added automatic resize of entry button captions
+
+ -- Drees Dormann <dormann@univention.de>  Tue, 28 Oct 2014 14:45:04 +0100
+
 univention-apache (7.0.6-1) unstable; urgency=low
 
   Bug #36095: 
