--- a/desktop/firefox-en/debian/changelog
+++ b/desktop/firefox-en/debian/changelog
@@ -1,3 +1,9 @@
+firefox-en (1:31.2.0esr-1) unstable; urgency=medium
+
+  * Update to Firefox 31.2.0 ESR (Bug #36175)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Tue, 28 Oct 2014 15:47:55 +0100
+
 firefox-en (1:24.8.1esr-1) unstable; urgency=medium
 
   * Update to Firefox 24.8.1 ESR (Bug #35993)
