--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,11 @@
+univention-apache (7.0.7-1) unstable; urgency=low
+
+  Bug #36095:
+  * cleaned up and rearranged startsite.js
+  * added check if DOM nodes exist in startsite.js 
+
+ -- Johannes Keiser <keiser@univention.de>  Tue, 28 Oct 2014 16:20:31 +0100
+
 univention-apache (7.0.6-2) unstable; urgency=low
 
   Bug #36095:
