--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console (6.0.24-26) unstable; urgency=medium
+
+  * Bug #36319: Improved password expiry detection: Check conversation
+    instead of return code.
+  * Set PAM.PAM_USER for chauthtok to fix user="(null)" auth.log messages
+
+ -- Arvid Requate <requate@univention.de>  Tue, 28 Oct 2014 16:36:08 +0100
+
 univention-management-console (6.0.24-25) unstable; urgency=medium
 
   * Bug #36319: Error codes returned by pam.authenticate() differ
