--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console (7.1.57-1) unstable; urgency=medium
+
+  * Bug #35985: implement workaround for changing of expired password on disabled accounts
+
+ -- Florian Best <best@univention.de>  Tue, 28 Oct 2014 16:46:12 +0100
+
 univention-management-console (7.1.56-1) unstable; urgency=medium
 
   * Bug #35985: fix changing of expired password
