* Don't show a notification message that the settings are not   changeable (Bug #36307)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55034 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,10 @@
+univention-virtual-machine-manager-daemon (4.0.5-1) unstable; urgency=medium
+
+  * Don't show a notification message that the settings are not
+    changeable (Bug #36307)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 28 Oct 2014 16:52:38 +0100
+
 univention-virtual-machine-manager-daemon (4.0.4-3) unstable; urgency=low
 
   * Bug #35982: Show pending state with a distinct icon 
