* Bug #36095: adjust handling of translation resources
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55035 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,9 @@
+univention-apache (7.0.8-1) unstable; urgency=medium
+
+  * Bug #36095: adjust handling of translation resources
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 28 Oct 2014 16:53:15 +0100
+
 univention-apache (7.0.7-1) unstable; urgency=low
 
   Bug #36095:
