--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.79-1) unstable; urgency=low
+
+  * Bug #36415: Switched parameters for mixin 
+
+ -- Alexander Kramer <kramer@univention.de>  Tue, 28 Oct 2014 16:55:06 +0100
+
 univention-management-console-frontend (4.1.78-1) unstable; urgency=low
 
   * Bug #36315: Adapted Wizard widget to set the bootstrap classes
