* Bug #36260: Expose whether the app is installed somewhere in the domain
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55039 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (4.1.13-2) unstable; urgency=low
+
+  * Bug #36260: Expose whether the app is installed somewhere in the domain
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 28 Oct 2014 17:10:43 +0100
+
 univention-management-console-module-appcenter (4.1.13-1) unstable; urgency=medium
 
   * Bug #35654: outsource UMC startup checks into the modules
