--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,6 +1,12 @@
+univention-management-console-frontend (4.1.79-2) unstable; urgency=medium
+
+  * Bug #36415: fixed typo in Wizard
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 28 Oct 2014 17:20:19 +0100
+
 univention-management-console-frontend (4.1.79-1) unstable; urgency=low
 
-  * Bug #36415: Switched parameters for mixin 
+  * Bug #36415: Switched parameters for mixin
 
  -- Alexander Kramer <kramer@univention.de>  Tue, 28 Oct 2014 16:55:06 +0100
 
