--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-udm (5.1.16-2) unstable; urgency=low
+
+  * Bug #36260: Show hint for printer module if no printserver is configured
+    in the domain
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 28 Oct 2014 17:25:49 +0100
+
 univention-management-console-module-udm (5.1.16-1) unstable; urgency=medium
 
   * Bug #35654: outsource UMC startup checks into the modules
