* Bug #36415: fixed typo in Wizard (again)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55045 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.79-3) unstable; urgency=medium
+
+  * Bug #36415: fixed typo in Wizard (again)
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 28 Oct 2014 18:06:07 +0100
+
 univention-management-console-frontend (4.1.79-2) unstable; urgency=medium
 
   * Bug #36415: fixed typo in Wizard
