* Package update for UCS 4.0 (Bug #35889)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55050 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-radius/debian/changelog
+++ b/services/univention-radius/debian/changelog
@@ -1,3 +1,9 @@
+univention-radius (2.0.0-1) unstable; urgency=medium
+
+  * Package update for UCS 4.0 (Bug #35889)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 28 Oct 2014 18:55:10 +0100
+
 univention-radius (1.0.0-5) unstable; urgency=low
 
   * allow configuration via LDAP (Bug #29465)
