Bug #35847: add  "passwordchange-all" to "default-umc-users"
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55053 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-passwordchange/umc/js/de.po
+++ b/management/univention-management-console-module-passwordchange/umc/js/de.po
@@ -18,8 +18,8 @@ msgstr "Password ändern"
 
 #: umc/js/passwordchange.js:61
 #, python-format
-msgid "Change the password of user %s"
-msgstr "Password des Benutzers %s ändern"
+msgid "Change the password of user \"%s\""
+msgstr "Passwort des Benutzers \"%s\" ändern"
 
 #: umc/js/passwordchange.js:80
 msgid "New password"
