--- a/management/univention-management-console-module-diagnostic/debian/changelog
+++ b/management/univention-management-console-module-diagnostic/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-diagnostic (1.0.8-2) unstable; urgency=medium
+
+  * Bug #34765: add missing CSS file
+
+ -- Florian Best <best@univention.de>  Tue, 28 Oct 2014 20:39:41 +0100
+
 univention-management-console-module-diagnostic (1.0.8-1) unstable; urgency=medium
 
   * Bug #34765: fix noDataMessage
