* Set the default ssl hash function back to sha1   (Bug #35836 and Bug #36324)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55055 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-ssl/debian/changelog
+++ b/base/univention-ssl/debian/changelog
@@ -1,3 +1,10 @@
+univention-ssl (9.0.1-1) unstable; urgency=medium
+
+  * Set the default ssl hash function back to sha1
+    (Bug #35836 and Bug #36324)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 28 Oct 2014 21:06:20 +0100
+
 univention-ssl (9.0.0-5) unstable; urgency=low
 
   * new defaults for ssl/default/hashfunction (sha384)
