--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.32-1) unstable; urgency=medium
+
+  * Always remove /var/lib/univention-ldap/root.secret (Bug #36331)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 28 Oct 2014 21:11:04 +0100
+
 univention-system-setup (8.1.31-1) unstable; urgency=medium
 
   * Update browser compatibility list, added Safari Mobile (Bug #33970)
