--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (4.1.14-1) unstable; urgency=medium
+
+  * Bug #35654: translation
+
+ -- Florian Best <best@univention.de>  Tue, 28 Oct 2014 23:02:52 +0100
+
 univention-management-console-module-appcenter (4.1.13-2) unstable; urgency=low
 
   * Bug #36260: Expose whether the app is installed somewhere in the domain
