--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (4.1.14-2) unstable; urgency=low
+
+  * Bug #36260: Catch App Center being called before LDAP is up and running
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 28 Oct 2014 23:11:56 +0100
+
 univention-management-console-module-appcenter (4.1.14-1) unstable; urgency=medium
 
   * Bug #35654: translation
