--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.80-2) unstable; urgency=medium
+
+  * Bug #35847: some details
+
+ -- Florian Best <best@univention.de>  Wed, 29 Oct 2014 00:30:20 +0100
+
 univention-management-console-frontend (4.1.80-1) unstable; urgency=medium
 
   * Bug #35847: translate error messages of PAM
