--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console (7.1.58-2) unstable; urgency=medium
+
+  * Bug #35847: some details
+
+ -- Florian Best <best@univention.de>  Wed, 29 Oct 2014 00:30:15 +0100
+
 univention-management-console (7.1.58-1) unstable; urgency=medium
 
   * Bug #35847: translate error messages of PAM
