--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (10.0.28-1) unstable; urgency=low
+
+  * Bug #36322: Added Back button in software module
+
+ -- Alexander Kramer <kramer@univention.de>  Wed, 29 Oct 2014 09:17:46 +0100
+
 univention-updater (10.0.27-1) unstable; urgency=low
 
   * univention-repository-create is know able to handle UCS 4 DVDs (Bug #36269)
