* removed ucr entry for umc-overview icon / added unset of ucr entry   (Bug #36316)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55066 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-doc/debian/changelog
+++ b/base/univention-doc/debian/changelog
@@ -1,3 +1,10 @@
+univention-doc (2.0.0-2) unstable; urgency=low
+
+  * removed ucr entry for umc-overview icon / added unset of ucr entry
+    (Bug #36316)
+
+ -- Drees Dormann <dormann@univention.de>  Wed, 29 Oct 2014 10:52:18 +0100
+
 univention-doc (2.0.0-1) unstable; urgency=medium
 
   * Update to UCS 4.0 (Bug #35267)
