* fixed typo in postinst (Bug #36316)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55067 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-doc/debian/changelog
+++ b/base/univention-doc/debian/changelog
@@ -1,3 +1,9 @@
+univention-doc (2.0.0-3) unstable; urgency=low
+
+  * fixed typo in postinst (Bug #36316)
+
+ -- Drees Dormann <dormann@univention.de>  Wed, 29 Oct 2014 11:04:24 +0100
+
 univention-doc (2.0.0-2) unstable; urgency=low
 
   * removed ucr entry for umc-overview icon / added unset of ucr entry
