Bug #32026: display a help link in modules
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55068 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (5.1.17-2) unstable; urgency=medium
+
+  * Bug #32026: display a help link in modules
+
+ -- Florian Best <best@univention.de>  Wed, 29 Oct 2014 11:00:25 +0100
+
 univention-management-console-module-udm (5.1.17-1) unstable; urgency=medium
 
   * Bug #36299: adjust size of form fields in the dialogue for new objects
