Bug #35654: use app.registerOnStartup instead of topic
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55069 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (10.0.29-1) unstable; urgency=medium
+
+  * Bug #35654: use app.registerOnStartup instead of topic
+
+ -- Florian Best <best@univention.de>  Wed, 29 Oct 2014 10:56:33 +0100
+
 univention-updater (10.0.28-1) unstable; urgency=low
 
   * Bug #36322: Added Back button in software module
