--- a/management/univention-join/debian/changelog
+++ b/management/univention-join/debian/changelog
@@ -1,3 +1,9 @@
+univention-join (7.1.0-6) unstable; urgency=medium
+
+  * Bug #35654: use app.registerOnStartup instead of topic
+
+ -- Florian Best <best@univention.de>  Wed, 29 Oct 2014 10:55:49 +0100
+
 univention-join (7.1.0-5) unstable; urgency=medium
 
   * Bug #35654: implement startup checks
