--- a/management/univention-management-console-module-passwordchange/debian/changelog
+++ b/management/univention-management-console-module-passwordchange/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-passwordchange (0.1.0-3) unstable; urgency=medium
+
+  * Bug #35654: use app.registerOnStartup instead of topic
+
+ -- Florian Best <best@univention.de>  Wed, 29 Oct 2014 10:56:23 +0100
+
 univention-management-console-module-passwordchange (0.1.0-2) unstable; urgency=medium
 
   * Bug #35847: add  "passwordchange-all" to "default-umc-users"
