* removed ucr entry for umc-overview icon / added unset of ucr entry   (Bug #36316)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55070 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/nagios/univention-nagios/debian/changelog
+++ b/nagios/univention-nagios/debian/changelog
@@ -1,3 +1,10 @@
+univention-nagios (8.0.0-4) unstable; urgency=low
+
+  * removed ucr entry for umc-overview icon / added unset of ucr entry
+    (Bug #36316)
+
+ -- Drees Dormann <dormann@univention.de>  Wed, 29 Oct 2014 11:01:34 +0100
+
 univention-nagios (8.0.0-3) unstable; urgency=low
 
   * added a missing / to the symlink (Bug #35078)
