* removed ucr entry for umc-overview icon / added unset of ucr entry  (Bug #36316)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55071 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/univention-demo-configuration/debian/changelog
+++ b/test/univention-demo-configuration/debian/changelog
@@ -1,3 +1,10 @@
+univention-demo-configuration (3.0.0-2) unstable; urgency=low
+
+  * removed ucr entry for umc-overview icon / added unset of ucr entry
+   (Bug #36316)
+
+ -- Drees Dormann <dormann@univention.de>  Wed, 29 Oct 2014 11:13:15 +0100
+
 univention-demo-configuration (3.0.0-1) unstable; urgency=low
 
   * Migrated univention-demo-configuration to UCS-4.0-0 (Bug #35664)
