Bug #35654: Add Minimize button in module header instead of Back to Overview button
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55075 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/umc/de.po
+++ b/management/univention-management-console-frontend/umc/de.po
@@ -657,6 +657,9 @@ msgstr "<b>Benutzer</b> %(username)s"
 msgid "{number} errors occurred: "
 msgstr "{number} Fehler sind aufgetreten: "
 
+msgid "Minimize"
+msgstr "Minimieren"
+
 #~ msgid "Activate"
 #~ msgstr "Aktivieren"
 
