Bug #35654: * adjusted initialsetup.html to fit new design * removed obsolete css and js files * added translation for the initialsetup message
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55078 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,12 @@
+univention-system-setup (8.1.33-1) unstable; urgency=low
+
+  Bug #35654:
+  * adjusted initialsetup.html to fit new design
+  * removed obsolete css and js files
+  * added translation for the initialsetup message   
+
+ -- Johannes Keiser <keiser@univention.de>  Wed, 29 Oct 2014 11:30:51 +0100
+
 univention-system-setup (8.1.32-1) unstable; urgency=medium
 
   * Always remove /var/lib/univention-ldap/root.secret (Bug #36331)
