--- a/base/univention-system-setup/var/www/ucs-overview/js/initialsetup/de.po
+++ b/base/univention-system-setup/var/www/ucs-overview/js/initialsetup/de.po
@@ -16,22 +16,9 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: pygettext.py 1.5\n"
 
-#: var/www/ucs-overview/js-initialsetup/initialstartsite.js:71
-#, python-brace-format
-msgid "UCS - {hostname}.{domainname}"
-msgstr "UCS - {hostname}.{domainname}"
-
-#: var/www/ucs-overview/js-initialsetup/initialstartsite.js:72
-#, python-brace-format
-msgid "Welcome to Univention Corporate Server <b>{hostname}.{domainname}</b>"
-msgstr ""
-"Willkommen auf Univention Corporate Server <b>{hostname}.{domainname}</b>"
-
-#: var/www/ucs-overview/js-initialsetup/initialstartsite.js:73
 msgid "Welcome to UCS initial configuration"
 msgstr "Willkommen zum initialen UCS Konfigurationssetup"
 
-#: var/www/ucs-overview/js-initialsetup/initialstartsite.js:74
 msgid ""
 "Before starting the setup wizard, an initial password for the <i>root</i> "
 "user must be set."
@@ -39,7 +26,6 @@ msgstr ""
 "Bevor der Einrichtungsassistent gestartet werden kann, muss ein initiales "
 "Passwort für den <i>root</i> Benutzer gesetzt werden."
 
-#: var/www/ucs-overview/js-initialsetup/initialstartsite.js:75
 msgid ""
 "Connect to this server instance as <i>root</i> via ssh and your selected "
 "private ssh key. Set a password with <i>passwd</i>, e.g., by issuing the "
@@ -49,14 +35,9 @@ msgstr ""
 "gewählten privaten ssh Schlüssel. Setzen Sie ein Passwort mit <i>passwd</i>, "
 "beispielsweise mit folgendem Befehl:"
 
-#: var/www/ucs-overview/js-initialsetup/initialstartsite.js:76
 msgid "ssh -i &lt;path/to/privatekey&gt; root@&lt;serveraddress&gt; passwd"
 msgstr "ssh -i &lt;pfad/zum/privatekey&gt; root@&lt;serveradresse&gt; passwd"
 
-#: var/www/ucs-overview/js-initialsetup/initialstartsite.js:77
-msgid "If a password for <i>root</i> has been set, "
-msgstr "Wenn das Passwort für <i>root</i> gesetzt wurde, "
+msgid "If a password for <i>root</i> has been set, <a href='/univention-management-console/?module=setup&overview=false&displayUsername=false&username=root'>start the setup wizard</a>."
+msgstr "Wenn das Passwort für <i>root</i> gesetzt wurde, <a href='/univention-management-console/?module=setup&overview=false&displayUsernagme=false&username=root'>starten Sie den Einrichtungsassistenten</a>."
 
-#: var/www/ucs-overview/js-initialsetup/initialstartsite.js:78
-msgid "start the setup wizard"
-msgstr "starten Sie den Einrichtungsassistenten"
