--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,4 +1,10 @@
-univention-apache (7.0.8-1.1) unstable; urgency=low
+univention-apache (7.0.9-1) unstable; urgency=low
+
+  Bug #36095: minor css adaptations for warning messages
+
+ -- Johannes Keiser <keiser@univention.de>  Wed, 29 Oct 2014 12:12:46 +0100
+
+univention-apache (7.0.8-2) unstable; urgency=low
 
   Bug #36316:
     * removed ucr entries for icons / added unset of icons
