* Bug #36328: removed obsolete translation command from debian/rules
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55081 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.33-2) unstable; urgency=medium
+
+  * Bug #36328: removed obsolete translation command from debian/rules
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 29 Oct 2014 12:43:05 +0100
+
 univention-system-setup (8.1.33-1) unstable; urgency=low
 
   Bug #35654:
