--- a/management/univention-management-console-module-reboot/debian/changelog
+++ b/management/univention-management-console-module-reboot/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-reboot (4.1.2-4) unstable; urgency=medium
+
+  * Bug #35654: fix last commit
+
+ -- Florian Best <best@univention.de>  Wed, 29 Oct 2014 12:45:11 +0100
+
 univention-management-console-module-reboot (4.1.2-3) unstable; urgency=medium
 
   * Bug #35654: use app.registerOnStartup instead of topic
