--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.80-4) unstable; urgency=medium
+
+  * Bug #35654: add minimize button to modules instead of above, fix order of header menu entries
+
+ -- Florian Best <best@univention.de>  Wed, 29 Oct 2014 12:46:23 +0100
+
 univention-management-console-frontend (4.1.80-3) unstable; urgency=medium
 
   * Bug #35654: use app.registerOnStartup instead of topic
