removed unused openssl.conf (Bug #30545)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@55085 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-ssl/debian/changelog
+++ b/base/univention-ssl/debian/changelog
@@ -1,3 +1,9 @@
+univention-ssl (8.0.0-6) unstable; urgency=low
+
+  * removed unused openssl.conf (Bug #30545) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 29 Oct 2014 13:19:25 +0100
+
 univention-ssl (8.0.0-5) unstable; urgency=low
 
   * new defaults for ssl/default/hashfunction (sha384)
