removed unused openssl.conf (Bug #30545)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55086 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-ssl/debian/changelog
+++ b/base/univention-ssl/debian/changelog
@@ -1,3 +1,9 @@
+univention-ssl (9.0.2-1) unstable; urgency=low
+
+  * removed unused openssl.conf (Bug #30545) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 29 Oct 2014 13:24:26 +0100
+
 univention-ssl (9.0.1-1) unstable; urgency=medium
 
   * Set the default ssl hash function back to sha1
