* Bug #36304: Workaround for restrictive imghdr.test_jpeg
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@55088 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (10.0.25-1) unstable; urgency=medium
+
+  * Bug #36304: Workaround for restrictive imghdr.test_jpeg
+
+ -- Arvid Requate <requate@univention.de>  Wed, 29 Oct 2014 13:37:03 +0100
+
 univention-directory-manager-modules (10.0.24-1) unstable; urgency=medium
 
   * Bug #35847: remove password from users/self
